--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -14,9 +14,5 @@ html(lang='ja')
 		include include/_title
 		include include/_css
 	body
-		form(method="post" name="lpForm" data-target-form)
-			label(for="name")
-				p name
-			input#name(name="name" type="text" placeholder="お名前を入力してください")
-			button(type="submit" data-trigger-submit) submit
+		#app
 		include include/_js
