--- a/src/stylus/object/project/helloworld.styl
+++ b/src/stylus/object/project/helloworld.styl
@@ -1,20 +1,7 @@
 body
 	padding: 20px
-p
-	font-size: 1.4rem
-input
-	width: 100%
-	height: 44px
-	display: flex
-	align-items: center
-	padding: 0 20px
-	border: 1px solid #ccc
-button
-	border: 1px solid #ccc
-	border-radius: 3px
-	justify-content: center
-	align-items: center
-	font-size: 1.4rem
-	height: 44px
-	margin-top: 10px
-	padding: 0 10px
+	background-color: #000
+#app
+	color: #fff
+	font-size: 3rem
+	font-weight: bold
