--- a/src/stylus/object/project/helloworld.styl
+++ b/src/stylus/object/project/helloworld.styl
@@ -1,7 +1,22 @@
 body
 	padding: 20px
-	background-color: #000
-#app
-	color: #fff
-	font-size: 3rem
+p
+	font-size: 5rem
 	font-weight: bold
+.btn
+	font-size: 1.4rem
+	padding: 20px
+	border-radius: 3px
+	border: 1px solid #ccc
+	color: #272727
+	&__wrap
+		display: flex
+		margin-top: 10px
+		width: 100%
+		justify-content: space-evenly
+.page
+	padding: 20px
+	flex-direction: column
+	justify-content: center
+	align-items: center
+	display: none
