--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -14,17 +14,17 @@ html(lang='ja')
 		include include/_title
 		include include/_css
 	body
-		#one.page
-			p 最初の画面
+		#one.page(data-target-spa)
+			p.title 最初の画面
 			.btn__wrap
 				button.btn(data-hash="two") お申込み前の方はこちら
 				button.btn(data-hash="three") お申し込み後の方はこちら
 		#two.page
-			p お申込み前の方用画面
+			p.title お申込み前の方用画面
 			.btn__wrap
 				button.btn(data-hash="one") 戻る
 		#three.page
-			p お申込み後の方用画面
+			p.title お申込み後の方用画面
 			.btn__wrap
 				button.btn(data-hash="one") 戻る
 		include include/_js
