--- a/src/stylus/object/project/helloworld.styl
+++ b/src/stylus/object/project/helloworld.styl
@@ -1,7 +1,5 @@
-body
-	padding: 20px
 p
-	font-size: 5rem
+	font-size: 2.8rem
 	font-weight: bold
 .btn
 	font-size: 1.4rem
@@ -9,6 +7,9 @@ p
 	border-radius: 3px
 	border: 1px solid #ccc
 	color: #272727
+	background-color: #fff
+	&:nth-child(n+2)
+		margin-left: 10px
 	&__wrap
 		display: flex
 		margin-top: 10px
@@ -20,3 +21,15 @@ p
 	justify-content: center
 	align-items: center
 	display: none
+.title
+	text-align: center
+	
+#one
+	background-color: #E84855
+	color: #F6A0A7
+#two
+	background-color: #F9DC5C
+	color: #A69954
+#three
+	background-color: #403F4C
+	color: #898890
