ベースを整えた

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -14,17 +14,5 @@ html(lang='ja')
 		include include/_title
 		include include/_css
 	body
-		#one.page
-			p 最初の画面
-			.btn__wrap
-				button.btn(data-hash="two") お申込み前の方はこちら
-				button.btn(data-hash="three") お申し込み後の方はこちら
-		#two.page
-			p お申込み前の方用画面
-			.btn__wrap
-				button.btn(data-hash="one") 戻る
-		#three.page
-			p お申込み後の方用画面
-			.btn__wrap
-				button.btn(data-hash="one") 戻る
+		p hello,world.
 		include include/_js
