--- a/src/stylus/object/project/default.styl
+++ b/src/stylus/object/project/default.styl
@@ -1,18 +1,6 @@
-.col-lg-5
-	width: 50%
-	&:nth-child(n+2)
-		margin-left: 10px
-.js-prefectures
+#allPrefecture
+	width: 100%
 	display: flex
-	
-.wrapper
-	position: relative
-h1
-	position sticky
-	top: 0
-	font-size: 2.8rem
-p
-	margin-top: 10px
-	font-size: 1.4rem
-.other
-	margin-top: 100px
+	flex-wrap wrap
+select
+	width: 50%
