--- a/src/stylus/object/project/default.styl
+++ b/src/stylus/object/project/default.styl
@@ -17,12 +17,27 @@
 		background: #fff
 	&__question
 		color: #272727
-		padding: 2em
+		padding: 2em 4em 2em 2em
 		line-height: 1.6
 		position: relative
+		cursor pointer
+		&__icon
+			transition all .2s ease-out
+			position: absolute
+			top: 50%
+			margin-top: -7px
+			right: 2em
+			&:before
+				color: #272727
+				font-size: 14px
+				line-height: 1
+		&.is-active
+			.faq__question__icon
+				transform rotate(180deg)
 	&__answer
 		padding: 0 2em 2em
 		color: #272727
+		display: none
 	&__input
 		border-radius: 3px
 		border: solid 1px #4A2881
@@ -40,3 +55,10 @@
 			width: 95%
 			margin: 0 auto
 			padding: 4em 0 2em
+	&__search
+		&__result
+			max-width: 1000px
+			width: 95%
+			margin: 0 auto
+			font-size: 14px
+			color: #272727
