テキストをダミーに変更

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -25,31 +25,27 @@ html(lang='ja')
 				h2.faq__category オペレーション
 				dl.faq__block
 					dt.faq__question
-						|利用時間は社内で共有されるのでしょうか？
+						|吾輩は猫である。名前はまだ無い。
 						span.faq__question__icon.fas.fa-angle-down
-					dd.faq__answer ご契約いただきました企業内の全ユーザー様でご共有されるイメージです。
+					dd.faq__answer どこで生れたかとんと見当がつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれは書生という人間中で一番獰悪な種族であったそうだ。この書生というのは時々我々を捕えて煮て食うという話である。しかしその当時は何という考もなかったから別段恐しいとも思わなかった。ただ彼の掌に載せられてスーと持ち上げられた時何だかフワフワした感じがあったばかりである。
 				dl.faq__block
 					dt.faq__question
-						|集音マイクでもご利用いただけますか？
+						|掌の上で少し落ちついて書生の顔を見たのがいわゆる人間というものの見始であろう。
 						span.faq__question__icon.fas.fa-angle-down
 					dd.faq__answer
-						| テレビ会議等で利用しているような集音マイクでございますと認識率が格段に下がってしまいます。
-						br
-						|マイクと人の距離によっては認識できない可能性もございます。
+						| この時妙なものだと思った感じが今でも残っている。第一毛をもって装飾されべきはずの顔がつるつるしてまるで薬缶だ。その後猫にもだいぶ逢ったがこんな片輪には一度も出会わした事がない。のみならず顔の真中があまりに突起している。そうしてその穴の中から時々ぷうぷうと煙を吹く。どうも咽せぽくて実に弱った。これが人間の飲む煙草というものである事はようやくこの頃知った。
 			section.faq__wrap
 				h2.faq__category トライアルについて
 				dl.faq__block
 					dt.faq__question
-						|トライアルは可能でしょうか？
+						|この書生の掌の裏でしばらくはよい心持に坐っておったが、しばらくすると非常な速力で運転し始めた。
 						span.faq__question__icon.fas.fa-angle-down
 					dd.faq__answer
-						| 可能でございます。ご導入に先立ちまして1ヶ月程度のトライアル期間を設けております。
-						br
-						| そちらで使用感や精度などを確かめて頂くことができます。トライアルまでの具体的な流れに関してはこちらからご確認ください。
+						| 書生が動くのか自分だけが動くのか分らないが無暗に眼が廻る。胸が悪くなる。到底助からないと思っていると、どさりと音がして眼から火が出た。それまでは記憶しているがあとは何の事やらいくら考え出そうとしても分らない。
 				dl.faq__block
 					dt.faq__question
-						|トライアル期間はどのくらい頂けますでしょうか？
+						|ふと気が付いて見ると書生はいない。
 						span.faq__question__icon.fas.fa-angle-down
-					dd.faq__answer 30日間とさせていただいております。
+					dd.faq__answer たくさんおった兄弟が一疋も見えぬ。肝心の母親さえ姿を隠してしまった。その上今までの所とは違って無暗に明るい。眼を明いていられぬくらいだ。はてな何でも容子がおかしいと、のそのそ這い出して見ると非常に痛い。吾輩は藁の上から急に笹原の中へ棄てられたのである。
 					
 	include include/_js
