--- a/src/stylus/object/project/default.styl
+++ b/src/stylus/object/project/default.styl
@@ -4,6 +4,8 @@
 		width: 95%
 		margin: 0 auto
 		padding: 4em 0 3em
+		&:first-of-type
+			padding: 0 0 3em
 	&__category
 		font-size: 3em
 		font-weight: normal
@@ -62,3 +64,5 @@
 			margin: 0 auto
 			font-size: 14px
 			color: #272727
+			&__body
+				margin-top: 20px
