シンプルなgrid

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -14,5 +14,7 @@ html(lang='ja')
 		include include/_title
 		include include/_css
 	body
-		p hello,world.
+		.container
+			.side
+			.main
 		include include/_js
