--- a/src/stylus/app.styl
+++ b/src/stylus/app.styl
@@ -1,11 +1,12 @@
 ////// Foundation
 // Reset
-@import '../../node_modules/ress/dist/ress.min.css'
+//@import '../../node_modules/ress/dist/ress.min.css'
 
 // Base
-@import 'foundation/base.styl'
+//@import 'foundation/base.styl'
 @import 'foundation/variable.styl'
 @import 'foundation/mixin.styl'
+@import '../../node_modules/bootstrap/dist/css/bootstrap.min.css'
 
 ////// Layout
 
