--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -14,5 +14,9 @@ html(lang='ja')
 		include include/_title
 		include include/_css
 	body
-		p hello,world.
+		p.txt
+			span.txt_num 1
+			|コマ
+			span.txt_num 90
+			|分の授業
 		include include/_js
