--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -14,5 +14,15 @@ html(lang='ja')
 		include include/_title
 		include include/_css
 	body
-		p hello,world.
+		.container
+			.trigger
+				p.point ex1
+				p.target.hidden abcdefgh
+			.trigger
+				p.point ex2
+				p.target.hidden ijklmnop
+			.trigger
+				p.point ex3
+				p.target.hidden qrstuvwx
+
 		include include/_js
