--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -14,5 +14,9 @@ html(lang='ja')
 		include include/_title
 		include include/_css
 	body
-		p hello,world.
+		-for(var i = 0;i < 10; i++)
+			p test
+		.parallax1
+		-for(var i = 0;i < 50; i++)
+			p test
 		include include/_js
