--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -14,13 +14,23 @@ html(lang='ja')
 		include include/_title
 		include include/_css
 	body
-		p
-			a.btn.btn-primary(data-toggle='collapse', href='#collapseExample', role='button', aria-expanded='false', aria-controls='collapseExample')
-				| Link with href
-			button.btn.btn-primary(type='button', data-toggle='collapse', data-target='#collapseExample', aria-expanded='false', aria-controls='collapseExample')
-				| Button with data-target
-		#collapseExample.collapse
-			.card.card-body
-				| Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+		nav.navbar.navbar-expand-md.navbar-light.bg-light.sticky-top
+			.container-fluid
+				a.navbar-brand(href='#')
+					img(src='img/logo.png')
+				button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarResponsive')
+					span.navbar-toggler-icon
+				#navbarResponsive.collapse.navbar-collapse
+					ul.navbar-nav.ml-auto
+						li.nav-item.active
+							a.nav-link(href='#') Home
+						li.nav-item
+							a.nav-link(href='#') About
+						li.nav-item
+							a.nav-link(href='#') Services
+						li.nav-item
+							a.nav-link(href='#') Team
+						li.nav-item
+							a.nav-link(href='#') Connect
 
 		include include/_js
