--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -14,5 +14,5 @@ html(lang='ja')
 		include include/_title
 		include include/_css
 	body
-		p hello,world.
+		#pdf-container
 		include include/_js
