--- a/src/stylus/app.styl
+++ b/src/stylus/app.styl
@@ -1,18 +1,20 @@
 ////// Foundation
 // Reset
-//@import '../../node_modules/ress/dist/ress.min.css'
+@import '../../node_modules/ress/dist/ress.min.css'
 
 // Base
-//@import 'foundation/base.styl'
+@import 'foundation/base.styl'
 @import 'foundation/variable.styl'
 @import 'foundation/mixin.styl'
 
 ////// Layout
-
+@import 'layout/main.styl'
 ////// Object
 //Component
+@import 'object/component/title.styl'
 
 //Project
-@import 'object/project/default.styl'
+@import 'object/project/form.styl'
+@import 'object/project/suggest.styl'
 
 //Utility
