--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -10,13 +10,12 @@ doctype html
 html(lang='ja')
 	head
 		include include/_meta
-		include include/_ogp
 		include include/_title
 		include include/_css
 	body
-		.wrap
-			p Email address
-			#placement
-				input#email(autocomplete='off' type='email')
-				ul#auto-list(style='display:none;')
+		.l-main
+			label.p-form__label(for="email") ✉️ Email
+			.p-suggest__container
+				input.p-form__input#email(autocomplete='off' type='email' data-trigger-suggest)
+				ul.p-suggest__result#auto-list(style='display:none;' data-target-suggest)
 		include include/_js
