--- a/src/stylus/foundation/base.styl
+++ b/src/stylus/foundation/base.styl
@@ -2,3 +2,4 @@ html
 	font-size 62.5%
 body
 	font-family: "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif
+	background-color: #02020A
