--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -14,5 +14,6 @@ html(lang='ja')
 		include include/_title
 		include include/_css
 	body
-		p hello,world.
+		#AmazonPayButton
+		script(async='async', src='https://origin-na.ssl-images-amazon.com/images/G/09/EP/offAmazonPayments/sandbox/prod/lpa/js/Widgets.js')
 		include include/_js
