inputをfixedした時のバグ検証

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -13,6 +13,9 @@ html(lang='ja')
 		include include/_ogp
 		include include/_title
 		include include/_css
-	body
-		p hello,world.
+	body(data-target)
+		.input__wrap
+			input(type="text")
+		- for(var i = 0; i < 1000; i++)
+			p Hello,World!
 		include include/_js
