--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -17,5 +17,5 @@ html(lang='ja')
 		.input__wrap
 			input(type="text")
 		- for(var i = 0; i < 1000; i++)
-			p Hello,World!
+			p Hello,World.
 		include include/_js
